# ECP

./: .gitignore  CMakeLists.txt  improved.txt  opt.txt  solution.txt
.github/workflows/: cmake-single-platform.yml
include/: argparser.hpp  delta.hpp  improvers.hpp  initializers.hpp  node.hpp  random.hpp  solution.hpp  solvers.hpp
reports/: common.py  report-ec-1.ipynb  report-ec-10.ipynb  report-ec-2.ipynb  report-ec-3.ipynb  report-ec-4.ipynb  report-ec-5.ipynb  report-ec-6.ipynb  report-ec-7.ipynb  report-ec-8.ipynb  report-ec-9.ipynb
scripts/: eval_ec1.ps1  eval_ec10-2.ps1  eval_ec2.ps1  eval_ec3-1.ps1  eval_ec3-2.ps1  eval_ec4-1.ps1  eval_ec4-2.ps1  eval_ec5-2.ps1  eval_ec6-1.ps1  eval_ec6-2.ps1  eval_ec6-3.ps1  eval_ec7-2.ps1  eval_ec8-1.ps1  eval_ec8-2.ps1  eval_ec9-1.ps1  eval_ec9-2.ps1
src/: argparser.cpp  delta.cpp  improvers.cpp  initializers.cpp  main.cpp  node.cpp  random.cpp  solution.cpp  solvers.cpp  tsp_improver.cpp  tsp_solver.cpp
tests/: test_delta.cpp  test_node.cpp  test_random.cpp  test_solution.cpp  test_solvers.cpp
